[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/UserInterface/ChangeSceneButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/RetryButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=6]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 40.0
margin_right = -79.0
margin_bottom = 71.0
text = "Score: %s"
align = 2

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseOverlay" instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -260.0
margin_bottom = -203.0
text = "Paused"

[node name="Menu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -151.5
margin_right = 180.0
margin_bottom = 151.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="PauseOverlay/Menu"]
margin_right = 360.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Resume"

[node name="ChangeSceneButton" parent="PauseOverlay/Menu" instance=ExtResource( 3 )]
margin_top = 102.0
margin_right = 360.0
margin_bottom = 200.0
text = "Main Screen"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="QuitButton" parent="PauseOverlay/Menu" instance=ExtResource( 4 )]
margin_top = 204.0
margin_right = 360.0
margin_bottom = 303.0

[node name="DeathOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.235294 )

[node name="Title" parent="DeathOverlay" instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -260.0
margin_bottom = -203.0
text = "You died"

[node name="Menu" type="VBoxContainer" parent="DeathOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -151.5
margin_right = 180.0
margin_bottom = 151.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" parent="DeathOverlay/Menu" instance=ExtResource( 5 )]
margin_right = 360.0
margin_bottom = 98.0

[node name="ChangeSceneButton" parent="DeathOverlay/Menu" instance=ExtResource( 3 )]
margin_top = 102.0
margin_right = 360.0
margin_bottom = 200.0
text = "Main Screen"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="QuitButton" parent="DeathOverlay/Menu" instance=ExtResource( 4 )]
margin_top = 204.0
margin_right = 360.0
margin_bottom = 303.0

[connection signal="button_up" from="PauseOverlay/Menu/ResumeButton" to="." method="_on_ResumeButton_button_up"]
